@@ -1,3 +1,9 @@
+2012-01-04  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/integration/razor.jl: add integration-module for
+	Razor-Qt
+
+	* lisp/sawfish/wm/user.jl: same
+
 2011-12-27  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/integration/mate.jl: add integration-module for MATE
 
